# whatsapp-task-pipeline

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
deploy/: com.example.task-reminders.plist
docs/: ARCHITECTURE.md
docs/architecture/: 01-introduction-goals.md  02-constraints.md  03-context.md  04-solution-strategy.md  05-building-blocks.md  06-runtime.md  07-deployment.md  08-crosscutting.md  09-decisions.md  10-quality.md  11-risks.md  12-glossary.md  README.md
homeassistant/: automation.task_notification_response.yaml
src/: listener_example.py  task_extract.py  task_reminders.py
src/whatsapp_task_pipeline/: __init__.py  actions.py  check.py  listener.py  providers.py  task_extract.py  task_reminders.py
tests/: conftest.py  test_actions.py  test_checker.py  test_providers.py  test_real_roundtrip.py  test_redaction.py  test_routing_core.py
