[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "whatsapp-task-pipeline"
version = "0.2.0"
description = "Trusted-sender messages → Home Assistant to-do items, classified by an LLM you point it at (local by default), with an escalating reminder loop."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.urls]
Homepage = "https://github.com/danaghili/whatsapp-task-pipeline"

# The three named commands (INC-001 FR-1.7 / OQ-3): listener, reminder loop,
# and the config checker. The wtp- prefix keeps them discoverable together.
[project.scripts]
wtp-listen = "whatsapp_task_pipeline.listener:main"
wtp-remind = "whatsapp_task_pipeline.task_reminders:main"
wtp-check = "whatsapp_task_pipeline.check:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
